fix: update mobile navigation styles for improved spacing and layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -397,31 +397,29 @@ img {
 /* Navigation for mobile devices */
 @media screen and (max-width: 1023px) {
   .nav__brand-actions {
-    column-gap: 0;
+    column-gap: .75rem !important;
   }
 
   .nav__brand-actions > * + * {
-    margin-left: .42rem;
+    margin-left: 0 !important;
   }
 
   .nav__actions {
-    column-gap: 0;
+    column-gap: 0 !important;
   }
 
-  .nav__actions > * + * {
-    margin-left: -.32rem;
+  .nav__actions .nav__search {
+    margin-right: .75rem !important;
   }
 
-  .nav__actions .nav__search + .nav__login,
-  .nav__actions .nav__search + .nav__user {
-    margin-left: .42rem;
-  }
-
-  .nav__actions .nav__search,
   .nav__actions .nav__login,
   .nav__actions .nav__user,
   .nav__actions .nav__toggle {
-    margin: 0;
+    margin: 0 !important;
+  }
+
+  .nav__actions > * + * {
+    margin-left: 0 !important;
   }
 
   .nav__menu {
